# telegram_quality_control

./: .gitignore  DATASHEET.md  README.md  docker-compose.yaml  example.env  pyproject.toml
data/: message_length.csv  messages_per_day.csv  telegram_url_reliability.npy  twitter_url_reliability.npy  unique_estimate.txt
jobscripts/: run_jupyter.sh
notebooks/analysis/: chat_chat_lang_correlation.ipynb  chat_languages.ipynb  duplicate_analysis.ipynb  extract_entities.ipynb  make_rank_true_out.ipynb  make_timed_edge_list.ipynb  make_weighted_edge_list.ipynb  ngrams.ipynb  other_datasets.ipynb  seed_list.ipynb  topics.ipynb  url_reliability.ipynb
notebooks/data/: export_data.ipynb  upload_data.ipynb
notebooks/visualization/: entity_relation.ipynb  languages.ipynb  messages_over_time.ipynb  plot_degree_dsitributions.ipynb  topics.ipynb  true_recorded_degree.ipynb  url_reliability.ipynb  wimbd.ipynb
resources/: domain_blacklist.toml
resources/mpl_styles/: default.mplstyle
resources/reliability/original/: domain_ratings.csv
resources/reliability/updated/: README.md  domain_ratings.csv  raw_ratings.csv
scripts/: dataset_ingestion.py
telegram_quality_control/: bootstrap.py  chat_language.py  cleaning.py  db.py  distributed.py  kde.py  topics.py  urls.py  visualization.py
telegram_quality_control/data_models/: __init__.py  chat.py  chat_user.py  message.py  poll.py  types.py  user.py
